# meetime

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  next.config.mjs  package-lock.json  package.json
backend/: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
backend/app/: models.py
backend/meetime/: asgi.py  settings.py  urls.py  wsgi.py
backend/meetings/: admin.py  models.py  permissions.py  serializers.py  views.py  viewsets.py
backend/meetings/migrations/: 0001_initial.py  0002_meeting_access_code.py  0003_meeting_call_link.py
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/: env.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/auth/registration/: page.tsx
frontend/src/app/create-event/: page.tsx
frontend/src/app/meeting/: page.tsx
frontend/src/app/meeting/[slug]/: page.tsx
frontend/src/app/meetings/: page.tsx
frontend/src/components/WeeklySchedule/: TimeSlotTable.tsx  WeeklySchedule.tsx  timepeeker.ts
frontend/src/components/elements/: footer.tsx  header.tsx
frontend/src/components/ui/: button.tsx  calendar.tsx  card.tsx  form.tsx  toast.tsx  toaster.tsx  use-toast.ts
frontend/src/lib/: api.ts  token.ts
frontend/src/lib/api/: api.ts  interfaces.ts
frontend/src/styles/: globals.css
src/app/: layout.tsx  page.tsx
src/components/: Header.tsx  MainPart.tsx  Schedule.tsx
(+2 files in other folders)
